# ior

./: .clang-format  .editorconfig  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.h.in  ior.pc.in  vcpkg.json
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_metrics.c  bench_metrics.h  bench_platform.h  bench_platform_posix.c  bench_platform_win.c  bench_scenario.h  bench_trace.c  bench_trace.h  ior_bench.c  scenario_file.c  scenario_mixed.c  scenario_socket.c  scenario_work.c
src/: CMakeLists.txt  ior.c  ior.h  ior_backend.h  ior_iocp.c  ior_iocp.h  ior_log.c  ior_log.h  ior_threads.c  ior_threads.h  ior_threads_event.h  ior_threads_event_common.c  ior_threads_event_eventfd.c  ior_threads_event_pipe.c  ior_threads_poller.h  ior_threads_poller_epoll.c  ior_threads_poller_kqueue.c  ior_threads_poller_poll.c  ior_threads_pool.c  ior_threads_pool.h  ior_threads_ring.c  ior_threads_ring.h  ior_uring.c  ior_uring.h  ior_worker_pool.c  ior_worker_pool.h
tests/: CMakeLists.txt  test_basic.c  test_concurrency.c  test_edge.c  test_event.c  test_iocp_backend.c  test_link_timeout.c  test_poll.c  test_read_write.c  test_ring.c  test_slow_op.c  test_socket.c  test_splice.c  test_sq_reuse.c  test_threads_backend.c  test_threads_event.c  test_threads_ring.c  test_timeout.c  test_uring_backend.c  test_utils.c  test_utils.h  test_work.c
